# AEONlib

./: .gitignore  README.md  instruments.json  pyproject.toml
.github/workflows/: ci.yaml
codegen/lco/: generator.py
codegen/lco/templates/: instruments.jinja
examples/: LCOandESO.ipynb
src/aeonlib/: __init__.py  conf.py  exceptions.py  models.py  types.py
src/aeonlib/eso/: facility.py  models.py
src/aeonlib/ocs/: __init__.py  config_models.py  request_models.py  target_models.py
src/aeonlib/ocs/lco/: facility.py  instruments.py
src/aeonlib/ocs/soar/: facility.py  instruments.py
tests/eso/: test_models.py  test_online.py
tests/module/: test_module.py  test_types.py
tests/ocs/: lco_requests.py  soar_requests.py  test_models.py  test_online.py  test_online_validation.py
