[project]
name = "aeonlib"
version = "0.1.0"
description = "A suite of modules to enable TDA/MMA observations"
readme = "README.md"
authors = [
    { name = "Austin Riba", email = "ariba@lco.global" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
