[project]
name = "aeonlib"
version = "0.1.0"
description = "A suite of modules to enable TDA/MMA observations"
readme = "README.md"
authors = [{ name = "Austin Riba", email = "ariba@lco.global" }]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
codegen = [
    "jinja2>=3.1.6",
    "textcase>=0.2.1",
]

dev = ["pytest>=8.3.5"]
eso = ["p2api>=1.0.10"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",  "-m not online"]
markers = [
    "online: Marks tests that run online, for example, validating schemas",
    "side_effect: Online tests that have side effects such as creating observation requests",
]
log_cli = true
